2012-05-25  Miloslav Trmač  <mitr@redhat.com>

	* tmpwatch.c (safe_chdir, cleanupDirectory, main): Replace implicit
	comparisions to zero with explicit comparisons.

	* tmpwatch.c (kill_time, config_flags): New variables.
	(cleanupDirectory): Use `kill_time' and `config_flags' instead of
	passing around parameters `killTime' and `flags'.
	(main): Use `kill_time' and `config_flags' instead of local variables
	`killTime' and `flags'.

	* bind-mount.c (bind_mount_paths_index): Remove an unused variable.
	(is_bind_mount): Stop setting bind_mount_paths_index.

2011-07-19  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 2.10.3.
	* NEWS: Update.

	* tmpwatch.c (cleanupDirectory): Ignore EACCES on lstat(), this can be
	routinely returned by FUSE.

2011-04-28  Miloslav Trmač  <mitr@redhat.com>

	* bind-mount.c (read_mount_entry): Fix an EOF check.

2011-03-31  Miloslav Trmač  <mitr@redhat.com>

	* bind-mount.c (read_mount_line): Remove an unused variable.

2011-03-31  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 2.10.2.
	* NEWS: Update.

	* m4/gnulib-cache.m4: Remove stat-time and timespec again.

	* bind-mount.c: Use __linux for #ifdef.
	(MOUNTINFO_PATH, OBSTACK_OBJECT_SIZE, struct mount, mount_entries)
	(num_mount_entries, mount_data_obstack, mount_data_mark)
	(mount_string_obstack, mount_string_mark, mount_list_obstack)
	(mountinfo_line_obstack, init_mount_entries, read_mount_line)
	(parse_mount_string, read_mount_entry, read_mount_entries): New
	definitions, reading /proc/self/mountinfo.
	(mountinfo_fd): New variable.
	(last_path_mounted_mtime): Removed variable.
	(cmp_ints, cmp_mount_entry_pointers, cmp_id_mount_entry): New functions.
	(rebuild_bind_mount_paths, is_bind_mount, bind_mount_init): Use data
	from /proc/self/mountinfo.

	* bind-mount.c (bind_mount_init): Rename from init_bind_mount_paths ().
	All users changed.
	* bind-mount.h (bind_mount_init): Rename from init_bind_mount_paths ().

2011-03-21  Miloslav Trmač  <mitr@redhat.com>
